--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "devDependencies": {
     "@vitest/coverage-v8": "^2.1.3",
+    "@vitest/ui": "^2.1.3",
     "vitest": "^2.1.3"
   },
   "scripts": {
